hacer que el estado se actualice por queryparam
